--- a/NeopilotVS/NeopilotVS.csproj
+++ b/NeopilotVS/NeopilotVS.csproj
@@ -1,41 +1,23 @@
+<PropertyGroup Condition="'$(OS)' != 'Windows_NT'">
+  <!-- Skip VSIX project entirely on Linux/macOS -->
+  <SkipBuild>true</SkipBuild>
+  <SkipClean>true</SkipClean>
+  <SkipRestore>true</SkipRestore>
+  <EnableDefaultItems>false</EnableDefaultItems>
+</PropertyGroup>
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <VSCommonIDEPath Condition="'$(VSCommonIDEPath)' == ''">$(MSBuildExtensionsPath32)\..\Common7\IDE</VSCommonIDEPath>
     <LangVersion>latest</LangVersion>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|Win32'">
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|arm64'">
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|Win32'">
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|arm64'">
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{B37F2AE5-CDEC-45B3-944D-8EF912810A12}</ProjectGuid>
+    <NoWarn>NU1701</NoWarn>
+    <UseWPF>true</UseWPF>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NeopilotVS</RootNamespace>
     <AssemblyName>Neopilot</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -46,8 +28,6 @@
     <StartAction>Program</StartAction>
     <StartProgram Condition="'$(DevEnvDir)' != ''">$(DevEnvDir)devenv.exe</StartProgram>
     <StartArguments>/rootsuffix Exp</StartArguments>
-  </PropertyGroup>
-  <PropertyGroup>
     <Deterministic>true</Deterministic>
     <DeterministicSourcePaths>true</DeterministicSourcePaths>
     <PathMap>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))=./</PathMap>
@@ -91,83 +71,6 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CodeLensConnection\CodeLensConnectionHandler.cs" />
-    <Compile Include="CodeLensConnection\CodeLensListener.cs" />
-    <Compile Include="CodeLensOOP\NeopilotCodeLensProvider.cs" />
-    <Compile Include="CodeLensOOP\CodeLensLogger.cs" />
-    <Compile Include="CodeLensOOP\SharedCodeLens.cs" />
-    <Compile Include="CodeLensOOP\VisualStudioConnectionHandler.cs" />
-    <Compile Include="InlineDiff\InlineDiffAdornment.cs" />
-    <Compile Include="InlineDiff\InlineDiffControl.xaml.cs">
-      <DependentUpon>InlineDiffControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="InlineDiff\InlineDiffView.cs" />
-    <Compile Include="SuggestionUI\StringCompare.cs" />
-    <Compile Include="LanguageServer\LanguageServerController.cs" />
-    <Compile Include="LanguageServer\LanguageServer.cs" />
-    <Compile Include="LanguageServer\LanguageServerInstaller.cs" />
-    <Compile Include="LanguageServer\Packets.cs" />
-    <Compile Include="NotificationBar.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="QuickInfo\IntellisenseController.cs" />
-    <Compile Include="QuickInfo\QuickInfoSource.cs" />
-    <Compile Include="SuggestionUI\InlineGreyTextTagger.cs" />
-    <Compile Include="SuggestionUI\Mapper.cs" />
-    <Compile Include="SuggestionUI\SuggestionTag.cs" />
-    <Compile Include="SuggestionUI\SuggestionTagger.cs" />
-    <Compile Include="SuggestionUI\TextViewListener.cs" />
-    <Compile Include="Utilities\Extensions.cs" />
-    <Compile Include="Utilities\FileUtilities.cs" />
-    <Compile Include="Utilities\PathProvider.cs" />
-    <Compile Include="Utilities\WorkspaceIndexer.cs" />
-    <Compile Include="Utilities\IntellisenseUtilities.cs" />
-    <Compile Include="Utilities\ProcessExtensions.cs" />
-    <Compile Include="Utilities\TextHighlighter.cs" />
-    <Compile Include="Utilities\CodeAnalyzer.cs" />
-    <Compile Include="Utilities\MefProvider.cs" />
-    <Compile Include="Windows\ChatToolWindow.cs" />
-    <Compile Include="Windows\EnterTokenDialogWindow.cs" />
-    <Compile Include="Commands\BaseCommandCodeLens.cs" />
-    <Compile Include="Commands\BaseCommandCompletionHandler.cs" />
-    <Compile Include="Commands\BaseCommandContextMenu.cs" />
-    <Compile Include="Commands\CommandCompleteSuggestion.cs" />
-    <Compile Include="Commands\CommandExplainCodeBlock.cs" />
-    <Compile Include="Commands\CommandExplainSelectionCodeBlock.cs" />
-    <Compile Include="Commands\CommandFindSimilarCode.cs" />
-    <Compile Include="Commands\CommandFindSimilarSelectionCodeBlock.cs" />
-    <Compile Include="Commands\CommandGenerateFunctionDocstring.cs" />
-    <Compile Include="Commands\CommandGenerateFunctionUnitTest.cs" />
-    <Compile Include="Commands\CommandGenerateSelectionFunctionDocstring.cs" />
-    <Compile Include="Commands\CommandOpenChatWindow.cs" />
-    <Compile Include="Commands\CommandRefactorCodeBlock.cs" />
-    <Compile Include="Commands\CommandRefactorSelectionCodeBlock.cs" />
-    <Compile Include="Commands\CommandShowNextSuggestion.cs" />
-    <Compile Include="Commands\CommandRestartLanguageServer.cs" />
-    <Compile Include="Commands\CommandSignIn.cs" />
-    <Compile Include="Commands\CommandSignOut.cs" />
-    <Compile Include="OutputWindow.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingsPage.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="NeopilotVSPackage.cs" />
-    <Compile Include="source.extension.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>source.extension.vsixmanifest</DependentUpon>
-    </Compile>
-    <Compile Include="VSCommandTable.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>VSCommandTable.vsct</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\RefactorCodeDialogWindow.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="..\.editorconfig">
       <Link>.editorconfig</Link>
     </None>
@@ -191,31 +94,17 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.507" ExcludeAssets="Runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
-      <Version>17.5.33428.388</Version>
+      <Version>17.14.40265</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK.VsixSuppression">
       <Version>14.1.37</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.8.2365">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.9.3168">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -229,34 +118,5 @@
       <Version>1.0.3-rc11</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Page Include="InlineDiff\InlineDiffControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\ChatToolWindowControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\EnterTokenDialogWindowControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\RefactorCodeDialogWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
   <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
