--- a/NeopilotVS/NeopilotVS.csproj
+++ b/NeopilotVS/NeopilotVS.csproj
@@ -7,6 +7,13 @@
 </PropertyGroup>
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup Condition="'$(OS)' != 'Windows_NT'">
+    <!-- Skip VSIX project entirely on Linux/macOS -->
+    <SkipBuild>true</SkipBuild>
+    <SkipClean>true</SkipClean>
+    <SkipRestore>true</SkipRestore>
+    <EnableDefaultItems>false</EnableDefaultItems>
+  </PropertyGroup>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
     <TargetFramework>net8.0-windows</TargetFramework>
