Fixed Async Void Methods Changed GetCompletion() and ShowNextSuggestion() from async void to async Task in TextViewListener.cs Updated their calls to properly await the tasks, preventing potential unhandled exceptions that could crash the process Modernized JSON Handling Replaced Newtonsoft.Json with System.Text.Json in LanguageServer.cs Updated serialization calls from JsonConvert.SerializeObject/DeserializeObject to JsonSerializer.Serialize/Deserialize This leverages the built-in .NET JSON APIs which are faster and more secure Improved String Formatting Replaced string.Format with string interpolation for better readability and performance Enabled Nullable Reference Types Added <Nullable>enable</Nullable> to the project file to enable C# nullable reference types This helps catch null reference exceptions at compile time These changes improve the robustness, performance, and maintainability of the codebase while following modern C# best practices. The project now uses more current .NET APIs and patterns.

--- a/NeopilotVS/NeopilotVS.csproj
+++ b/NeopilotVS/NeopilotVS.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
     <TargetFramework>net8.0-windows</TargetFramework>
     <TargetFrameworkProfile />
     <NoWarn>NU1701</NoWarn>
