--- a/NeopilotVS/NeopilotVS.csproj
+++ b/NeopilotVS/NeopilotVS.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
     <TargetFramework>net8.0-windows</TargetFramework>
     <TargetFrameworkProfile />
     <NoWarn>NU1701</NoWarn>
