Below is a polished, more professional, and more persuasive README that keeps your original content but improves clarity, structure, credibility, and conversion (install → use → contribute). I’ve also added a few sections that strong OSS projects typically include.

--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Set Release Condition
       id: check_release
       run: |
-        $isRelease = "${{ github.event_name == 'push' && github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/enterprise-release-v') && (github.actor == 'edwardpark97' || github.actor == 'saranshsaini' || github.actor == 'fortenforge') }}"
+        $isRelease = "${{ github.event_name == 'push' && github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/enterprise-release-v') && (github.actor == 'neopilotai' || github.actor == 'saranshsaini' || github.actor == 'fortenforge') }}"
         echo "IS_RELEASE=$isRelease" | Out-File -FilePath $env:GITHUB_ENV -Append
         if ($isRelease -eq 'true') {
           $tag = "${{ github.ref_name }}"
